Till Active Side bar

--- a/ShoppingCartWeb/Views/CountryMaster/CreateCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/CreateCountryMaster.cshtml
@@ -6,6 +6,12 @@
 <br />
 <form asp-action="CreateCountryMaster">
     <div class="container border p-3">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
         <h1 class="text-dark">Add Country</h1>
         <hr />
 
