--- a/ShoppingCartWeb/Views/Registration/IndexRegistration.cshtml
+++ b/ShoppingCartWeb/Views/Registration/IndexRegistration.cshtml
@@ -40,7 +40,7 @@
                 <tr>
 
                     <th>
-                        <a href="/Registration/IndexRegistration?orderBy=@Model.FirstNameSortOrder&@Model.OrderBy=@Model.FirstNameSortOrder" class="text-dark" style="font-size:medium;">FirstName</a>
+                        <a href="/Registration/IndexRegistration?orderBy=@Model.FirstNameSortOrder" class="text-dark" style="font-size:medium;">FirstName</a>
 
                     </th>
 
