--- a/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
@@ -135,37 +135,42 @@
 
     </div>
 
-    <nav aria-label="Page navigation example" class="justify-content-end">
-        <ul class="pagination">
-            @if (Model.CurrentPage > 1)
-            {
-                <li class="page-item">
-                    <a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-            }
+    <div>
 
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                if (i == Model.CurrentPage)
+        <nav aria-label="Page navigation example" class="justify-content-end">
+            <ul class="pagination">
+                @if (Model.CurrentPage > 1)
                 {
-                    <li class="page-item"><a class="page-link active" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                }
 
-                }
-                else
+                @for (int i = 1; i <= Model.TotalPages; i++)
                 {
-                    <li class="page-item"><a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    if (i == Model.CurrentPage)
+                    {
+                        <li class="page-item"><a class="page-link active" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+
+                    }
+                    else
+                    {
+                        <li class="page-item"><a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    }
                 }
-            }
-            @if (Model.CurrentPage < Model.TotalPages)
-            {
-                <li class="page-item">
-                    <a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            }
-        </ul>
-    </nav>
+                @if (Model.CurrentPage < Model.TotalPages)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+
+    </div>
+
 </div>
