--- a/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
@@ -7,10 +7,19 @@
 <form asp-action="UpdateCountryMaster">
 
     <div class="container border p-3">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
         <h1 class="text-dark">Country</h1>
         <hr />
 
         <input hidden asp-for="CountryId" />
+        <input hidden asp-for="CreatedBy" />
+        <input hidden asp-for="CreatedOn" />
+
         <div class="row">
             <div class="col-md-6">
                 <div class="row pb-3">
