--- a/ShoppingCartWeb/Views/Registration/UpdateRegistration.cshtml
+++ b/ShoppingCartWeb/Views/Registration/UpdateRegistration.cshtml
@@ -6,11 +6,19 @@
 <br />
 <form asp-action="UpdateRegistration">
     <div class="container border p-3">
-        <h1 class="text-dark">Edit Registration</h1>
+        <style>
+            .text-dark {
+                font-size: 26px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
+        <h1 class="text-dark">Registration</h1>
         <hr />
 
         <input hidden asp-for="Registration.RegistrationId" />
         <input hidden asp-for="CurrentPage" />
+        <input hidden asp-for="Registration.CreatedBy" />
+        <input hidden asp-for="Registration.CreatedOn" />
 
         <div class="row">
             <div class="col-md-6">
