--- a/ShoppingCartWeb/Views/RoleMaster/UpdateRoleMaster.cshtml
+++ b/ShoppingCartWeb/Views/RoleMaster/UpdateRoleMaster.cshtml
@@ -4,12 +4,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
-<form asp-action="UpdateRoleMaster">
+<form method="Post" asp-action="UpdateRoleMaster">
     <div class="container border p-3">
-        <h1 class="text-dark">Role</h1>
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
+        <h1 class="text-dark">Roles</h1>
         <hr />
 
         <input hidden asp-for="RoleId" />
+        <input hidden asp-for="CreatedBy" />
+        <input hidden asp-for="CreatedOn" />
+
         <div class="row">
             <div class="col-md-6">
                 <div class="row pb-3">
