--- a/ShoppingCartWeb/Views/StateMaster/CreateStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/CreateStateMaster.cshtml
@@ -8,9 +8,14 @@
 <br />
 <form asp-action="CreateStateMaster">
     <div class="container border p-3">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
         <h1 class="text-dark">Add State</h1>
         <hr />
-
         <div class="row">
             <div class="col-md-6">
                 <div class="row pb-3">
