--- a/ShoppingCartWeb/Views/StateMaster/IndexStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/IndexStateMaster.cshtml
@@ -53,118 +53,154 @@
 
                 @foreach (var item in Model.StateMasterDTO)
                 {
-                    if (@item.IsDeleted == false)
-                    {
-                        <tr>
-                            <td>@item.StateName</td>
-                            <td style="white-space: nowrap;"> @item.CountryMaster.CountryName</td>
 
+                    <tr>
+                        <td>@item.StateName</td>
+                        <td style="white-space: nowrap;"> @item.CountryMaster.CountryName</td>
+
+                        @if (item.IsDeleted == false)
+                        {
                             <td>
 
                                 <div class="btn-group" role="group">
                                     <a asp-controller="StateMaster" asp-action="UpdateStateMaster" asp-route-stateId="@item.StateId" class=" button-spacing btn ml-1 text-success" style="font:bold">
                                         <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
                                     </a>
-                                    <a href="#" class="btn ml-1 text-danger" style=" font:bold " data-toggle="modal" data-target="#deleteModal_@item.StateId"> <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span> </a>
+
+                                    <a href="#" class="btn ml-1 text-danger delete-button"
+                                       style="font:bold"
+                                       data-toggle="modal"
+                                       data-target="#deleteModal"
+                                       data-stateId="@item.StateId">
+                                        <span id="boot-icon" class="bi bi-trash-fill"
+                                              style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;">
+                                        </span>
+                                    </a>
                                 </div>
                             </td>
-                        </tr>
-                        <!-- Delete Confirmation Modal for each item -->
-                        <div class="modal fade" id="deleteModal_@item.StateId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Are you sure you want to delete this item?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                        <a asp-controller="StateMaster" asp-action="RemoveStateMaster" asp-route-stateId="@item.StateId" class="btn btn-danger">Delete</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
-
-                    else
-                    {
-                        <tr>
-                            <td style="white-space: nowrap;">@item.StateName</td>
-                            <td style="white-space: nowrap;"> @item.CountryMaster.CountryName</td>
+                        }
+                        else
+                        {
                             <td>
 
                                 <div class="btn-group" role="group">
 
-                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.StateId"> Active </a>
+                                    <a href="#" class="btn btn-primary btn-sm ml-2 enable-button"
+                                       data-toggle="modal"
+                                       data-target="#enableModal"
+                                       data-stateId="@item.StateId">
+                                        Active
+                                    </a>
+
 
                                 </div>
                             </td>
-                        </tr>
-                    }
+                        }
 
-                    <!-- Enable Confirmation Modal for each item -->
-                    <div class="modal fade" id="enableModal_@item.StateId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to Enable this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                    <a asp-controller="StateMaster" asp-action="EnableStateMaster" asp-route-stateId="@item.StateId" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
-                                </div>
+                    </tr>
+
+
+                }
+                
+                <!-- Enable Confirmation Modal -->
+                <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to enable?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                <a id="enableModalButton" asp-controller="StateMaster" asp-action="EnableStateMaster" asp-route-stateId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
                             </div>
                         </div>
                     </div>
-                }
+                </div>
+
+
+                <!-- Delete Confirmation Modal -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <a id="deleteModalButton" asp-controller="StateMaster" asp-action="RemoveStateMaster" asp-route-stateId="" class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </tbody>
         </table>
 
 
         <script>
             $(document).ready(function () {
-                $("#deleteConfirmationModal").on("click", function (e) {
-                    e.preventDefault();
-                    var stateId = $(this).data("stateId");
-                    Swal.fire({
-                        title: 'Confirm Deletion',
-                        text: 'Are you sure you want to delete this user?',
-                        icon: 'warning',
-                        showCancelButton: true,
-                        confirmButtonColor: '#d33',
-                        cancelButtonColor: '#3085d6',
-                        confirmButtonText: 'Delete',
-                        cancelButtonText: 'Cancel'
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            alert(registerstateId);
-                                        .ajax({
-                                type: "POST",
-                                url: '@Url.Action("RemoveStateMaster", "StateMaster")',
-                                data: { stateId: $(this).data("stateId") },
-                                dataType: 'json',
-                                success: function (data) {
-                                    location.reload(true);
-                                },
-                                error: function () {
-                                    location.reload(true);
-                                }
-                            });
-                        }
-                    });
+                $('.delete-button').click(function () {
+                    var stateId = $(this).data('stateid');
+                    console.log(stateId);
+                    $('#stateIdToDelete').text(stateId); // Set the StateId in the modal
+                    $('#deleteModalButton').attr('href', '/StateMaster/RemoveStateMaster?stateId=' + stateId); // Set the Delete button's URL
                 });
             });
+
+            $(document).ready(function () {
+                $('.enable-button').click(function () {
+                    var stateId = $(this).data('stateid');
+                    $('#stateIdToEnable').text(stateId); // Set the StateId in the modal
+                    $('#enableModalButton').attr('href', '/StateMaster/EnableStateMaster?stateId=' + stateId); // Set the button's URL
+                });
+            });
+
+
+                                                                        //$(document).ready(function () {
+                                                                        //    $("#deleteConfirmationModal").on("click", function (e) {
+                                                                        //        e.preventDefault();
+                                                                        //        var stateId = $(this).data("stateId");
+                                                                        //        Swal.fire({
+                                                                        //            title: 'Confirm Deletion',
+                                                                        //            text: 'Are you sure you want to delete this user?',
+                                                                        //            icon: 'warning',
+                                                                        //            showCancelButton: true,
+                                                                        //            confirmButtonColor: '#d33',
+                                                                        //            cancelButtonColor: '#3085d6',
+                                                                        //            confirmButtonText: 'Delete',
+                                                                        //            cancelButtonText: 'Cancel'
+                                                                        //        }).then((result) => {
+                                                                        //            if (result.isConfirmed) {
+                                                                        //                alert(registerstateId);
+                                                                        //                                                    .ajax({
+                                                                        //                    type: "POST",
+                                                                        //                    url: '@Url.Action("RemoveStateMaster", "StateMaster")',
+                                                                        //                    data: { stateId: $(this).data("stateId") },
+                                                                        //                    dataType: 'json',
+                                                                        //                    success: function (data) {
+                                                                        //                        location.reload(true);
+                                                                        //                    },
+                                                                        //                    error: function () {
+                                                                        //                        location.reload(true);
+                                                                        //                    }
+                                                                        //                });
+                                                                        //            }
+                                                                        //        });
+                                                                        //    });
+                                                                        //});
+
         </script>
 
 
