--- a/ShoppingCartWeb/Views/StateMaster/UpdateStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/UpdateStateMaster.cshtml
@@ -6,10 +6,19 @@
 <br />
 <form asp-action="UpdateStateMaster">
     <div class="container border p-3">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
         <h1 class="text-dark">State</h1>
         <hr />
 
         <input hidden asp-for="State.StateId" />
+        <input hidden asp-for="State.CreatedBy" />
+        <input hidden asp-for="State.CreatedOn" />
+
         <div class="row">
             <div class="col-md-6">
                 <div class="row pb-3">
