--- a/ShoppingCartWeb/Views/User/IndexUser.cshtml
+++ b/ShoppingCartWeb/Views/User/IndexUser.cshtml
@@ -59,19 +59,32 @@
                         <td>@item.UserName</td>
                         <td>*********</td>
                         <td style="white-space: nowrap;">@item.RoleMaster.RoleName</td>
-                        <td>
-                            <div class="btn-group" role="group">
+                        @if (item.IsDeleted == false)
+                        {
+                            <td>
+                                <div class="btn-group" role="group">
 
-                                <a asp-controller="User" asp-action="UpdateUser" asp-route-userId="@item.UserId" class="btn btn-sm ml-1">
-                                    <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
-                                </a>
+                                    <a asp-controller="User" asp-action="UpdateUser" asp-route-userId="@item.UserId" class="btn btn-sm ml-1">
+                                        <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
+                                    </a>
 
-                                <a href="#" class="btn btn-sm ml-1" data-toggle="modal" data-target="#deleteModal_@item.UserId">
-                                    <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
-                                </a>
-                            </div>
-                        </td>
+                                    <a href="#" class="btn btn-sm ml-1" data-toggle="modal" data-target="#deleteModal_@item.UserId">
+                                        <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
+                                    </a>
+                                </div>
+                            </td>
+                        }
+                        else
+                        {
+                            <td>
+                                <div class="btn-group" role="group">
+                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.UserId"> Active </a>
+                                </div>
+                            </td>
+                        }
+
                     </tr>
+
                     <!-- Delete Confirmation Modal for each item -->
                     <div class="modal fade" id="deleteModal_@item.UserId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
@@ -88,6 +101,27 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                     <a asp-controller="User" asp-action="RemoveUser" asp-route-userId="@item.UserId" class="btn btn-danger">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Enable Confirmation Modal for each item -->
+                    <div class="modal fade" id="enableModal_@item.UserId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to Enable this item?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                    <a asp-controller="User" asp-action="EnableUser" asp-route-userId="@item.UserId" class="btn btn-success">Yes</a>
                                 </div>
                             </div>
                         </div>
