--- a/ShoppingCartWeb/Views/User/Register.cshtml
+++ b/ShoppingCartWeb/Views/User/Register.cshtml
@@ -7,7 +7,13 @@
 <br />
 <form asp-action="Register">
     <div class="container border p-3">
-        <h1 class="text-dark">Register User</h1>
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
+        <h1 class="text-dark">Add User</h1>
         <hr />
 
         <div class="row">
